force-app/main/default/objects/Account/fields/Account_Status_Flg__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Flg__c</fullName>
    <formula>Image(case( Account_Status__c ,&quot;Active&quot;,&quot;/img/samples/flag_green.gif&quot;,
&quot;Inactive&quot;,&quot;/img/samples/flag_red.gif&quot;,
&quot;Temp&quot;,&quot;/img/samples/flag_yellow.gif&quot;,&quot;/s.gif&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status Flg</label>
    <type>Text</type>
</CustomField>