force-app/main/default/objects/Account/fields/Account_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Type__c</fullName>
    <label>Account Sub Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>