force-app/main/default/objects/Account/fields/DD_Competitor_Brand__c.field-meta.xml
<CustomField>
    <fullName>DD_Competitor_Brand__c</fullName>
    <label>DD Competitor Brand</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_DD_Competitor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1DAM MULTIFOCAL</fullName>
            </value>
            <value>
                <fullName>1-Day Acuvue Define</fullName>
            </value>
            <value>
                <fullName>1-Day Acuvue for Astigmatism</fullName>
            </value>
            <value>
                <fullName>1-Day Acuvue Moist</fullName>
            </value>
            <value>
                <fullName>1-Day Acuvue Moist for Astig</fullName>
            </value>
            <value>
                <fullName>1-Day TruEye (nara A)</fullName>
            </value>
            <value>
                <fullName>1-Day TruEye (nara B)</fullName>
            </value>
            <value>
                <fullName>Acuvue</fullName>
            </value>
            <value>
                <fullName>Acuvue Advance</fullName>
            </value>
            <value>
                <fullName>Acuvue Advance for Astig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>