force-app/main/default/objects/Account/fields/ISCUSTOMERPORTAL__c.field-meta.xml
<CustomField>
    <fullName>ISCUSTOMERPORTAL__c</fullName>
    <label>ISCUSTOMERPORTAL</label>
    <length>15</length>
    <type>Text</type>
</CustomField>