force-app/main/default/objects/Account/fields/of_Members__c.field-meta.xml
<CustomField>
    <fullName>of_Members__c</fullName>
    <label># of Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>