force-app/main/default/objects/Account/fields/P1__c.field-meta.xml
<CustomField>
    <fullName>P1__c</fullName>
    <label>P1</label>
    <length>55</length>
    <type>Text</type>
</CustomField>