force-app/main/default/objects/Account/fields/Primary_DD_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_DD_Competitor__c</fullName>
    <label>Primary DD Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alcon</fullName>
            </value>
            <value>
                <fullName>B&amp;L</fullName>
            </value>
            <value>
                <fullName>Cooper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>