force-app/main/default/objects/Account/fields/SAP_ACCOUNT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>SAP_ACCOUNT_NUMBER__c</fullName>
    <externalId>true</externalId>
    <label>SAP_ACCOUNT_NUMBER</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>