force-app/main/default/objects/Account/fields/TBM_Name__c.field-meta.xml
<CustomField>
    <fullName>TBM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TBM Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>