force-app/main/default/objects/Account/fields/TBM_Territory__c.field-meta.xml
<CustomField>
    <fullName>TBM_Territory__c</fullName>
    <label>TBM Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>