force-app/main/default/objects/Account/fields/XeroAccntExternalId__c.field-meta.xml
<CustomField>
    <fullName>XeroAccntExternalId__c</fullName>
    <label>XeroAccntExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>