force-app/main/default/objects/Account/recordTypes/Academic_Account.recordType-meta.xml
<RecordType>
    <fullName>Academic_Account</fullName>
    <active>true</active>
    <description>Record Type to be used for all Academic accounts.</description>
    <label>Academic Account</label>
</RecordType>