force-app/main/default/objects/Account/recordTypes/Consumer_migr_Account.recordType-meta.xml
<RecordType>
    <fullName>Consumer_migr_Account</fullName>
    <active>true</active>
    <label>Consumer_migr_Account</label>
</RecordType>