force-app/main/default/objects/Account/recordTypes/Customer_Group.recordType-meta.xml
<RecordType>
    <fullName>Customer_Group</fullName>
    <active>true</active>
    <description>Record Type to be used for all Customer Group accounts.</description>
    <label>Customer Group</label>
</RecordType>