force-app/main/default/objects/Account/recordTypes/Sub_Customer_Group.recordType-meta.xml
<RecordType>
    <fullName>Sub_Customer_Group</fullName>
    <active>true</active>
    <description>Record Type to be used for all Sub Customer Group accounts.</description>
    <label>Sub Customer Group</label>
</RecordType>