force-app/main/default/objects/Account/recordTypes/TBM_USER.recordType-meta.xml
<RecordType>
    <fullName>TBM_USER</fullName>
    <active>true</active>
    <label>TBM_USER</label>
</RecordType>