force-app/main/default/objects/Account/validationRules/AccountName.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountName</fullName>
    <active>false</active>
    <description>Account name will not allow to change anyone especilly sys admin</description>
    <errorConditionFormula>AND(ISCHANGED( Name ) , $User.Username&lt;&gt;&#39;system administrator&#39;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Do not have edit access to user</errorMessage>
</ValidationRule>