force-app/main/default/objects/Account/listViews/Consumer_Migration_Account.listView-meta.xml
<ListView>
    <fullName>Consumer_Migration_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Academic_Account</value>
    </filters>
    <label>Consumer_Migration_Account</label>
    <language>en_US</language>
    <sharedTo>
        <role>SW_Engineer</role>
    </sharedTo>
</ListView>